--- a/workflows/update_high_scores.yml
+++ b/workflows/update_high_scores.yml
@@ -1,40 +1,29 @@
 name: Update High Scores
 
 on:
-  workflow_dispatch:
-    inputs:
-      name:
-        description: 'Player Name'
-        required: true
-        default: 'Player'
-      score:
-        description: 'Player Score'
-        required: true
-        default: 0
+  repository_dispatch:
+    types: [update-high-scores]
 
 jobs:
-  update-scores:
+  update_high_scores:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout repository content
+    - name: Checkout repository
       uses: actions/checkout@v2
 
     - name: Update high scores
-      id: update_scores
       run: |
-        name=${{ github.event.inputs.name }}
-        score=${{ github.event.inputs.score }}
-        jq --arg name "$name" --argjson score "$score" '
-          . += [{"name": $name, "score": $score}] | sort_by(.score) | reverse | .[:3]
-        ' high_scores.json > high_scores_tmp.json
-        mv high_scores_tmp.json high_scores.json
+        echo ${{ github.event.client_payload.name }} ${{ github.event.client_payload.score }}
+        jq --arg name "${{ github.event.client_payload.name }}" --argjson score "${{ github.event.client_payload.score }}" \
+        '. |= [{name: $name, score: $score}] + . | sort_by(-.score) | .[:3]' high_score.json > tmp.json \
+        && mv tmp.json high_score.json
 
     - name: Commit and push changes
       run: |
-        git config --global user.name 'github-actions'
-        git config --global user.email 'github-actions@github.com'
-        git add high_scores.json
-        git commit -m 'Update high scores'
+        git config --local user.email "action@github.com"
+        git config --local user.name "GitHub Action"
+        git add high_score.json
+        git commit -m "Update high scores"
         git push
-
+      env:
+        GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
