--- a/workflows/update_high_scores.yml
+++ b/workflows/update_high_scores.yml
@@ -20,11 +20,11 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pyyaml
+        pip install requests
 
     - name: Update high scores
       run: |
         echo "Updating high scores"
         python update_high_scores.py
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
